--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "description": "RPG Game in HTML5 and JS",
-  "keywords": ["RPG"],
   "author": "Alex",
   "license": "MIT",
+  "keywords": [
+    "RPG"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit": "git-cz"
+  },
+  "devDependencies": {
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
