--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "RPG"
   ],
   "scripts": {
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "prebuild": "rm -rf dist",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.10.2",
@@ -23,7 +25,11 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "typescript": "^3.5.2"
+    "rimraf": "^2.6.3",
+    "ts-loader": "^6.0.3",
+    "typescript": "^3.5.2",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "config": {
     "commitizen": {
