--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   ],
   "scripts": {
     "commit": "git-cz",
+    "start": "webpack-dev-server --open --port 3000 --compress --mode development",
     "prebuild": "rm -rf dist",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "serve": "serve dist"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.10.2",
@@ -25,11 +27,14 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "rimraf": "^2.6.3",
+    "serve": "^11.0.2",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "config": {
     "commitizen": {
