--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "rimraf": "^2.6.3",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "serve": "^11.0.2",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
