--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "commitizen": "^3.1.1",
+    "css-loader": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
@@ -28,7 +29,10 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "serve": "^11.0.2",
     "ts-loader": "^6.0.3",
