--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
